refactor UserDetailsServiceImpl.java